--- a/index.html
+++ b/index.html
@@ -319,132 +319,138 @@ td {
 	  let joursChoisis = [];
 
 	  /* --- GARDE ICI TON OBJET donneesFestival TEL QUEL --- */
-	  let donneesFestival = {
-		"Vendredi 26": [
-		  { heure: "1", artistes: [
-			{ nom: "ACENDANT VIERGE", style: "Avant-garde Electro", scene: "Pulsar Stage" },
-			{ nom: "ACENDANT VIERGE", style: "Avant-garde Electro", scene: "Pulsar Stage" },
-		  ]},
-		  { heure: "2", artistes: [			
-			{ nom: "REINIER ZONNEVELD [LIVE]", style: "Techno", scene: "Pulsar Stage" },
-		  ]},
-		  { heure: "3", artistes: [			
-			{ nom: "ANGERFIST", style: "Hardcore", scene: "Pulsar Stage" },
-		  ]},
-		  { heure: "4", artistes: [
-			{ nom: "999999999", style: "Acid Techno", scene: "Pulsar Stage" },
-		  ]},
-		  { heure: "5", artistes: [			
-			{ nom: "OGUZ", style: "Techno", scene: "Pulsar Stage" },
-		  ]},
-		  { heure: "6", artistes: [
-			{ nom: "SUB ZERO PROJECT", style: "Hardstyle", scene: "Warzone Stage" },
-		  ]},
-		  { heure: "7", artistes: [
-			{ nom: "ROOLER", style: "Raw Hardstyle", scene: "Warzone Stage" },
-		  ]},			
-		  { heure: "8", artistes: [			
-			{ nom: "BILLX", style: "Hardtek", scene: "Warzone Stage" },
-		  ]},
-		  { heure: "9", artistes: [
-			{ nom: "VANDAL", style: "Raggatek", scene: "Warzone Stage" },
-		  ]},
-		  { heure: "10", artistes: [
-			{ nom: "SEFA", style: "Frenchcore", scene: "Warzone Stage" },
-		  ]},
-		  { heure: "11", artistes: [			
-			{ nom: "MISS K8", style: "Hardcore", scene: "Warzone Stage" },
-		  ]},
-		  { heure: "12", artistes: [
-			{ nom: "ANIME", style: "Hardcore italien", scene: "Warzone Stage" },
-		  ]},
-		  { heure: "13", artistes: [			
-			{ nom: "MAD DOG", style: "Hardcore italien", scene: "Warzone Stage" },
-		  ]},
-		  { heure: "14", artistes: [
-			{ nom: "PARTYRAISER", style: "Hardcore Uptempo", scene: "Warzone Stage" },
-		  ]},
-		  { heure: "15", artistes: [
-			{ nom: "MAJOR CONSPIRACY", style: "Uptempo", scene: "Warzone Stage" },
-		  ]},
-		  { heure: "16", artistes: [
-			{ nom: "DYEN", style: "neorave", scene: "Pulsar Stage" },
-		  ]},
-		  { heure: "17", artistes: [
-			{ nom: "STAN CHRIST", style: "Hard Techno", scene: "Pulsar Stage" },
-		  ]},
-		  { heure: "18", artistes: [
-			{ nom: "VIEZE ASBAK", style: "Hard Techno", scene: "Pulsar Stage" },
-		  ]},
-		  { heure: "19", artistes: [
-			{ nom: "HADES", style: "Melodic Industrial Techno", scene: "Pulsar Stage" },
-		  ]},
-		  { heure: "20", artistes: [
-			{ nom: "SKONE & PROTOSKEED PRESENT SILENCE", style: "Tekno", scene: "Warzone Stage" },
-		  ]},
-		  { heure: "21", artistes: [
-			{ nom: "SPICE UP!", style: "Tekno", scene: "Warzone Stage" },
-		  ]},
-		  { heure: "22", artistes: [
-			{ nom: "VON BIKRAV", style: "Gangsta rap Gabber", scene: "Warzone Stage" },
-		  ]},
-		  { heure: "23", artistes: [
-			{ nom: "NICE KEED", style: "Fast & Hard Techno", scene: "Pulsar Stage" },
-		  ]},
-		  { heure: "24", artistes: [
-			{ nom: "ZORZA", style: "Hyper Techno", scene: "Pulsar Stage" },
-		  ]},
-		  { heure: "25", artistes: [
-			{ nom: "DJ SCHNAKE", style: "Chipiecore/Trance/happy Hardcore/pop", scene: "2much stage" },
-		  ]},
-		  { heure: "26", artistes: [
-			{ nom: "SHANIXX", style: "Techno bitchy 2000", scene: "2much stage" },
-		  ]},
-		  { heure: "27", artistes: [
-			{ nom: "SHOSHANA", style: "Hard Techno/Ghetto beats/Groove", scene: "2much stage" },
-		  ]},
-		  { heure: "28", artistes: [
-			{ nom: "LUX", style: "Hard Trance", scene: "2much stage" },
-		  ]},
-		  { heure: "29", artistes: [
-			{ nom: "AVENIR", style: "Acid rave/Hard Techno/Electro/Punk rock", scene: "2much stage" },
-		  ]},
-		  { heure: "30", artistes: [
-			{ nom: "SIBI", style: "Trance/Hardstyle/Hardcore oldschool", scene: "2much stage" },
-		  ]},
-		],
-		"Samedi 27": [
-		  { heure: "31", artistes: [ { nom: "VINI VICI", style: "Psytrance", scene: "Lunar Stage" } ]},
-		  { heure: "32", artistes: [ { nom: "ASTRIX", style: "Psytrance", scene: "Lunar Stage" } ]},
-		  { heure: "33", artistes: [ { nom: "ANDY C", style: "Drum & Bass", scene: "Bassquake Stage" } ]},
-		  { heure: "34", artistes: [ { nom: "MALAA × ALTER EGO", style: "House / Bass House", scene: "Bassquake Stage" } ]},
-		  { heure: "35", artistes: [ { nom: "WILKINSON", style: "Drum & Bass", scene: "Bassquake Stage" } ]},
-		  { heure: "36", artistes: [ { nom: "ZOMBOY", style: "Dubstep", scene: "Bassquake Stage" } ]},
-		  { heure: "37", artistes: [ { nom: "HILIGHT TRIBE", style: "Trance / Tribal (Live)", scene: "Lunar Stage" } ]},
-		  { heure: "38", artistes: [ { nom: "ACE VENTURA", style: "Progressive Psytrance", scene: "Lunar Stage" } ]},
-		  { heure: "39", artistes: [ { nom: "PERCEVAL", style: "Psytrance", scene: "Lunar Stage" } ]},
-		  { heure: "40", artistes: [ { nom: "KAYZO", style: "Bass / Hard Dance", scene: "Bassquake Stage" } ]},
-		  { heure: "41", artistes: [ { nom: "MUST DIE!", style: "Dubstep / Bass", scene: "Bassquake Stage" } ]},
-		  { heure: "42", artistes: [ { nom: "KANINE", style: "Drum & Bass", scene: "Bassquake Stage" } ]},
-		  { heure: "43", artistes: [ { nom: "SOTA", style: "Drum & Bass", scene: "Bassquake Stage" } ]},
-		  { heure: "44", artistes: [ { nom: "INFEKT", style: "Riddim / Dubstep", scene: "Bassquake Stage" } ]},
-		  { heure: "45", artistes: [ { nom: "SAMPLIFIRE", style: "Dubstep", scene: "Bassquake Stage" } ]},
-		  { heure: "46", artistes: [ { nom: "MANDIDEXTROUS", style: "Jungle / 160-170", scene: "Bassquake Stage" } ]},
-		  { heure: "47", artistes: [ { nom: "ASDEK", style: "Bass House", scene: "Bassquake Stage" } ]},
-		  { heure: "48", artistes: [ { nom: "FUNK TRIBU", style: "Techno", scene: "Lunar Stage" } ]},
-		  { heure: "49", artistes: [ { nom: "MISCHLUFT", style: "Techno", scene: "Lunar Stage" } ]},
-		  { heure: "50", artistes: [ { nom: "EARGASM GOD", style: "Techno", scene: "Lunar Stage" } ]},
-		  { heure: "51", artistes: [ { nom: "LB AKA LABAT", style: "Electro / House", scene: "Lunar Stage" } ]},
-		  { heure: "52", artistes: [ { nom: "NØNAME", style: "Techno / Electro", scene: "Organik Stage" } ]},
-		  { heure: "53", artistes: [ { nom: "25EMEHEURE", style: "Hard Techno", scene: "Organik Stage" } ]},
-		  { heure: "54", artistes: [ { nom: "BALAGAN", style: "Techno", scene: "Organik Stage" } ]},
-		  { heure: "55", artistes: [ { nom: "PEAKSOU", style: "Trance/Hypertechno", scene: "Organik Stage" } ]},
-		  { heure: "56", artistes: [ { nom: "OBDTN", style: "Techno", scene: "Organik Stage" } ]},
-		  { heure: "57", artistes: [ { nom: "HIBI", style: "Trancy/Groovy", scene: "Organik Stage" } ]},
-		  { heure: "58", artistes: [ { nom: "MANIL", style: "Hard Techno/Groove", scene: "Organik Stage" } ]},
-		  { heure: "59", artistes: [ { nom: "RHDAMANTHE", style: "Techno", scene: "Organik Stage" } ]},
-		],
-	  };
+		let donneesFestival = {
+		  "Samedi 27": [
+		  		{ heure: "20h30", artistes: [
+				  { nom: "HIBI", style: "Trancy/Groovy", scene: "Organik Stage" },
+				]},
+				{ heure: "21h00", artistes: [
+				  { nom: "ASDEK", style: "Bass House", scene: "Bassquake Stage" },
+				]},
+				{ heure: "21h10", artistes: [
+				  { nom: "HILIGHT TRIBE", style: "Trance / Tribal (Live)", scene: "Lunar Stage" },
+				]},
+				{ heure: "21h45", artistes: [
+				  { nom: "MALAA × ALTER EGO", style: "House / Bass House", scene: "Bassquake Stage" },
+				]},
+				{ heure: "22h00", artistes: [
+				  { nom: "PEAKSOU", style: "Trance/Hypertechno", scene: "Organik Stage" },
+				]},
+				{ heure: "23h00", artistes: [
+				  { nom: "PERCEVAL", style: "Psytrance", scene: "Lunar Stage" },
+				  { nom: "MANIL", style: "Hard Techno/Groove", scene: "Organik Stage" },
+				]},
+				{ heure: "23h15", artistes: [
+				  { nom: "ZOMBOY", style: "Dubstep", scene: "Bassquake Stage" },
+				]},
+				{ heure: "00h00", artistes: [
+				  { nom: "LB AKA LABAT", style: "Electro / House", scene: "Lunar Stage" },
+				  { nom: "25EMEHEURE", style: "Hard Techno", scene: "Organik Stage" },
+				]},
+				{ heure: "00h15", artistes: [
+				  { nom: "WILKINSON", style: "Drum & Bass", scene: "Bassquake Stage" },
+				]},
+				{ heure: "1h00", artistes: [
+				  { nom: "FUNK TRIBU b2b MISCHLUFT", style: "Techno", scene: "Lunar Stage" },
+				]},
+				{ heure: "1h15", artistes: [
+				  { nom: "ANDY C", style: "Drum & Bass", scene: "Bassquake Stage" },
+				]},
+				{ heure: "1h30", artistes: [
+				  { nom: "NØNAME", style: "Techno / Electro", scene: "Organik Stage" },
+				]},
+				{ heure: "2h15", artistes: [
+				  { nom: "VINI VICI", style: "Psytrance", scene: "Lunar Stage" },
+				  { nom: "KAYZO b2b MUST DIE!", style: "Bass / Hard Dance / Dubstep", scene: "Bassquake Stage" },
+				]},
+				{ heure: "3h00", artistes: [
+				  { nom: "BALAGAN", style: "Techno", scene: "Organik Stage" },
+				]},
+				{ heure: "3h15", artistes: [
+				  { nom: "ASTRIX", style: "Psytrance", scene: "Lunar Stage" },
+				  { nom: "KANINE b2b SOTA", style: "Drum & Bass", scene: "Bassquake Stage" },
+				]},
+				{ heure: "4h00", artistes: [
+				  { nom: "OBDTN", style: "Techno", scene: "Organik Stage" },
+				]},
+				{ heure: "4h15", artistes: [
+				  { nom: "ACE VENTURA", style: "Progressive Psytrance", scene: "Lunar Stage" },
+				  { nom: "INFEKT b2b SAMPLIFIRE", style: "Riddim / Dubstep", scene: "Bassquake Stage" },
+				]},
+				{ heure: "5h00", artistes: [
+				  { nom: "RHADAMANTHE", style: "Techno", scene: "Organik Stage" },
+				]},
+				{ heure: "5h15", artistes: [
+				  { nom: "MANDIDEXTROUS", style: "Jungle / 160-170", scene: "Bassquake Stage" },
+				  { nom: "EARGASM GOD", style: "Techno", scene: "Lunar Stage" },
+				]},
+		  ],
+		  "Vendredi 26": [
+				{ heure: "21h00", artistes: [
+				  { nom: "SKONE & PROTOSKEED present SILENCE", style: "Tekno", scene: "Warzone Stage" },
+				  { nom: "NICE KEED", style: "Fast & Hard Techno", scene: "Pulsar Stage" },
+				]},
+				{ heure: "22h00", artistes: [
+				  { nom: "SPICE UP!", style: "Tekno", scene: "Warzone Stage" },
+				  { nom: "LUX", style: "Hard Trance", scene: "2much stage" },
+				]},
+				{ heure: "22h15", artistes: [
+				  { nom: "ZORZA", style: "Hyper Techno", scene: "Pulsar Stage" },
+				]},
+				{ heure: "23h00", artistes: [
+				  { nom: "MAD DOG", style: "Hardcore italien", scene: "Warzone Stage" },
+				]},
+				{ heure: "23h15", artistes: [
+				  { nom: "ACENDANT VIERGE", style: "Avant-garde Electro", scene: "Pulsar Stage" },
+				]},
+				{ heure: "23h30", artistes: [
+				  { nom: "SHOSHANA", style: "Hard Techno/Ghetto beats/Groove", scene: "2much stage" },
+				]},
+				{ heure: "23h45", artistes: [
+				  { nom: "VON BIKRAV", style: "Gangsta rap Gabber", scene: "Warzone Stage" },
+				]},
+				{ heure: "00h15", artistes: [
+				  { nom: "999999999", style: "Acid Techno", scene: "Pulsar Stage" },
+				]},
+				{ heure: "00h30", artistes: [
+				  { nom: "SUB ZERO PROJECT", style: "Hardstyle", scene: "Warzone Stage" },
+				]},
+				{ heure: "1h00", artistes: [
+				  { nom: "SIBI", style: "Trance/Hardstyle/Hardcore oldschool", scene: "2much stage" },
+				]},
+				{ heure: "1h15", artistes: [
+				  { nom: "OGUZ", style: "Techno", scene: "Pulsar Stage" },
+				]},
+				{ heure: "1h30", artistes: [
+				  { nom: "ROOLER", style: "Raw Hardstyle", scene: "Warzone Stage" },
+				]},
+				{ heure: "2h15", artistes: [
+				  { nom: "DYEN b2b STAN CHRIST", style: "Neorave / Hard Techno", scene: "Pulsar Stage" },
+				  { nom: "SHANIXX", style: "Techno bitchy 2000", scene: "2much stage" },
+				]},
+				{ heure: "2h30", artistes: [
+				  { nom: "BILLX b2b VANDAL", style: "Hardtek / Raggatek", scene: "Warzone Stage" },
+				]},
+				{ heure: "3h30", artistes: [
+				  { nom: "REINIER ZONNEVELD b2b ANGERFIST", style: "Techno", scene: "Pulsar Stage" },
+				  { nom: "SEFA", style: "Frenchcore", scene: "Warzone Stage" },
+				  { nom: "DJ SCHNAKE", style: "Chipiecore/Trance/happy Hardcore/pop", scene: "2much stage" },
+				]},
+				{ heure: "4h30", artistes: [
+				  { nom: "VIEZE ASBAK", style: "Hard Techno", scene: "Pulsar Stage" },
+				]},
+				{ heure: "4h45", artistes: [
+				  { nom: "MISS K8 b2b ANIME", style: "Hardcore", scene: "Warzone Stage" },
+				  { nom: "AVENIR", style: "Acid rave/Hard Techno/Electro/Punk rock", scene: "2much stage" },
+				]},
+				{ heure: "5h15", artistes: [
+				  { nom: "HADES", style: "Melodic Industrial Techno", scene: "Pulsar Stage" },
+				]},
+				{ heure: "5h20", artistes: [
+				  { nom: "MAJOR CONSPIRACY b2b PARTYRAISER", style: "Hardcore Uptempo", scene: "Warzone Stage" },
+				]},
+		  ],
+		};
 
 	  function demarrerChoix() {
 		joursChoisis = Array.from(document.querySelectorAll('#selection-jours input[type=checkbox]:checked')).map(cb => cb.value);
@@ -628,3 +634,4 @@ window.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
