--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ td {
 				  { nom: "MAD DOG", style: "Hardcore italien", scene: "Warzone Stage", fin: "23h45" },
 				]},
 				{ heure: "23h15", artistes: [
-				  { nom: "ACENDANT VIERGE", style: "Avant-garde Electro", scene: "Pulsar Stage", fin: "00h15" },
+				  { nom: "ASCENDANT VIERGE", style: "Avant-garde Electro", scene: "Pulsar Stage", fin: "00h15" },
 				]},
 				{ heure: "23h30", artistes: [
 				  { nom: "SHOSHANA", style: "Hard Techno/Ghetto beats/Groove", scene: "2much stage", fin: "1h00" },
@@ -1070,3 +1070,4 @@ td {
 
 </body>
 </html>
+
